update to v 1.4
1. 兼容JDK6
2. 兼容weblogic内存webshell
3. 优化报错信息
4. 解决windows下中文乱码的问题
5. 不再支持response作为入口参数
6. 增加用于测试的Web项目